--- a/web-sockets/rails-websockets/app/views/application/index.html.erb
+++ b/web-sockets/rails-websockets/app/views/application/index.html.erb
@@ -4,8 +4,8 @@
         <title>RailsWebsockets</title>
         <%= csrf_meta_tags %>
 
-        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'cable', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'MainWithPorts', 'data-turbolinks-track': 'reload' %>
     </head>
 
     <body>
