All examples working with single channel example

--- a/web-sockets/rails-websockets/app/views/application/index.html.erb
+++ b/web-sockets/rails-websockets/app/views/application/index.html.erb
@@ -3,15 +3,13 @@
     <head>
         <title>RailsWebsockets</title>
         <%= csrf_meta_tags %>
-
-        <%= javascript_include_tag 'MainWithSockets', 'data-turbolinks-track': 'reload' %>
     </head>
 
     <body>
         <div style="display:flex; flex-direction: column;">
             <a href="/ports">Demo Using Ports</a>
             <a href="/using_websocket">Demo Using elm-lang/websocket</a>
-            <a href="/using_websocket">Demo Using websocket-rails</a>
+            <a href="/using_rails_websocket">Demo Using websocket-rails</a>
         </div>
     </body>
 </html>
